--- a/src/components/style/common.scss
+++ b/src/components/style/common.scss
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat:wght@100;200;300;400;500&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
 @import './vars.scss';
+
 //RESET
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    line-height: 0.5 rem;
 }
 
 //COMMON
@@ -37,3 +44,32 @@ a {
 .orange {
     color: $brand_primary_color;
 }
+
+.btn-orange {
+    background-color: $brand_primary_color;
+    color: white;
+    display: inline-block;
+    padding: 0.5rem 3rem;
+}
+
+.large-title {
+    font-size: 60px;
+}
+
+.large-text {
+    font-size: 25px;
+    font-weight: 450;
+}
+
+.padd {
+    padding: 1rem 0;
+}
+
+.gray-text {
+    color: gray;
+}
+
+
+
+
+    
